--- a/Bookstore/templates/admin/addBook.html
+++ b/Bookstore/templates/admin/addBook.html
@@ -2,7 +2,7 @@
 
 {% block title %}Add New Book | Bestseller Book Store{% endblock %}
 
-{% block body %}
+{% block content %}
 <div class="row pad">
 	<div class="col-lg-12">
 		<h2 class="bold text-center">Add New Book To The Inventory</h2>
