--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
     <style type="text/css">
         body{
-            background-image:url("../static/imgs/Background.jpg");
+            background-image:url("../static/imgs/background10.jpg");
             background-size: cover;
         
 
